@@ -27,6 +27,7 @@
 #include "ApplicationFeatures/ApplicationServer.h"
 #include "ApplicationFeatures/LanguageFeature.h"
 #include "Basics/Exceptions.h"
+#include "Basics/FeatureFlags.h"
 #include "Basics/FileUtils.h"
 #include "Basics/NumberOfCores.h"
 #include "Basics/ReadLocker.h"
@@ -1301,24 +1302,26 @@ void RocksDBEngine::start() {
   _logMetrics =
       std::make_shared<RocksDBAsyncLogWriteBatcherMetricsImpl>(&_metrics);
 
-#ifndef USE_CUSTOM_WAL
   // When using the custom WAL implementation, we don't need to register a
   // RocksDB sync listener.
-  auto logPersistor =
-      std::make_shared<replication2::storage::rocksdb::AsyncLogWriteBatcher>(
-          RocksDBColumnFamilyManager::get(
-              RocksDBColumnFamilyManager::Family::ReplicatedLogs),
-          _db->GetRootDB(), std::make_shared<SchedulerExecutor>(server()),
-          server().getFeature<ReplicatedLogFeature>().options(), _logMetrics);
-  _logPersistor = logPersistor;
+#ifndef USE_CUSTOM_WAL
+  if (replication2::EnableReplication2) {
+    auto logPersistor =
+        std::make_shared<replication2::storage::rocksdb::AsyncLogWriteBatcher>(
+            RocksDBColumnFamilyManager::get(
+                RocksDBColumnFamilyManager::Family::ReplicatedLogs),
+            _db->GetRootDB(), std::make_shared<SchedulerExecutor>(server()),
+            server().getFeature<ReplicatedLogFeature>().options(), _logMetrics);
+    _logPersistor = logPersistor;
 
-  if (auto* syncer = syncThread(); syncer != nullptr) {
-    syncer->registerSyncListener(std::move(logPersistor));
-  } else {
-    LOG_TOPIC("0a5df", WARN, Logger::REPLICATION2)
-        << "In replication2 databases, setting waitForSync to false will not "
-           "work correctly without a syncer thread. See the "
-           "--rocksdb.sync-interval option.";
+    if (auto* syncer = syncThread(); syncer != nullptr) {
+      syncer->registerSyncListener(std::move(logPersistor));
+    } else {
+      LOG_TOPIC("0a5df", WARN, Logger::REPLICATION2)
+          << "In replication2 databases, setting waitForSync to false will not "
+             "work correctly without a syncer thread. See the "
+             "--rocksdb.sync-interval option.";
+    }
   }
 #endif
 
@@ -1395,7 +1398,6 @@ void RocksDBEngine::stop() {
     while (_backgroundThread->isRunning()) {
       std::this_thread::yield();
     }
-    _backgroundThread.reset();
   }
 
   if (_syncThread) {
@@ -1406,7 +1408,6 @@ void RocksDBEngine::stop() {
     while (_syncThread->isRunning()) {
       std::this_thread::yield();
     }
-    _syncThread.reset();
   }
 
   waitForCompactionJobsToFinish();
@@ -1414,6 +1415,10 @@ void RocksDBEngine::stop() {
 
 void RocksDBEngine::unprepare() {
   TRI_ASSERT(isEnabled());
+  TRI_ASSERT(!_backgroundThread->isRunning());
+  _backgroundThread.reset();
+  TRI_ASSERT(!_syncThread->isRunning());
+  _syncThread.reset();
   waitForCompactionJobsToFinish();
   shutdownRocksDBInstance();
 }
